vertical align bug/weirdness

--- a/css/site.styl
+++ b/css/site.styl
@@ -217,7 +217,6 @@ img
   padding-top: 0.5em
   padding-left: $margin-tiny
 
-
 // SEARCH
 
 #tags-header
@@ -346,6 +345,7 @@ img
 
 .caption-main
   margin: 0 $margin-tiny
+  vertical-align: baseline
 
 // PAGE
 
